--- a/app/src/main/res/layout/add_property_fragment.xml
+++ b/app/src/main/res/layout/add_property_fragment.xml
@@ -19,7 +19,8 @@
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginBottom="60dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -30,8 +31,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/marginStart"
-                    android:textStyle="bold"
                     android:text="@string/property_type"
+                    android:textStyle="bold"
                     app:layout_constraintBaseline_toBaselineOf="@id/type_input_layout"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -52,9 +53,31 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/marginStart"
-                    android:text="@string/description"
+                    android:text="@string/address"
                     android:textStyle="bold"
                     app:layout_constraintBaseline_toBaselineOf="@id/description_text_input"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/textViewType" />
+
+                <TextView
+                    android:id="@+id/textViewPrice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/marginStart"
+                    android:text="@string/price"
+                    android:textStyle="bold"
+                    app:layout_constraintBaseline_toBaselineOf="@id/surface_text_input"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/textViewDescription" />
+
+                <TextView
+                    android:id="@+id/textViewCharacteristics"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/marginStart"
+                    android:text="@string/characteristics"
+                    android:textStyle="bold"
+                    app:layout_constraintBaseline_toBaselineOf="@id/price_text_input"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/textViewType" />
 
@@ -95,9 +118,9 @@
                     android:layout_marginStart="@dimen/marginStart"
                     android:layout_marginTop="@dimen/marginTop"
                     android:hint="@string/address"
+                    android:inputType="textPostalAddress"
                     android:textSize="@dimen/textSize"
                     app:endIconMode="clear_text"
-                    android:inputType="textPostalAddress"
                     app:layout_constraintStart_toEndOf="@id/barrier"
                     app:layout_constraintTop_toBottomOf="@id/type_input_layout" />
 
@@ -108,9 +131,9 @@
                     android:layout_marginStart="@dimen/marginStart"
                     android:layout_marginTop="@dimen/marginTop"
                     android:hint="@string/address2"
+                    android:inputType="textPostalAddress"
                     android:textSize="@dimen/textSize"
                     app:endIconMode="clear_text"
-                    android:inputType="textPostalAddress"
                     app:layout_constraintStart_toEndOf="@id/barrier"
                     app:layout_constraintTop_toBottomOf="@id/address_text_input" />
 
@@ -121,8 +144,8 @@
                     android:layout_marginStart="@dimen/marginStart"
                     android:layout_marginTop="@dimen/marginTop"
                     android:hint="@string/city"
-                    android:textSize="@dimen/textSize"
                     android:inputType="text"
+                    android:textSize="@dimen/textSize"
                     app:endIconMode="clear_text"
                     app:layout_constraintStart_toEndOf="@id/barrier"
                     app:layout_constraintTop_toBottomOf="@id/address2_text_input" />
@@ -147,6 +170,7 @@
                     android:layout_marginStart="@dimen/marginStart"
                     android:layout_marginTop="@dimen/marginTop"
                     android:hint="@string/country"
+                    android:inputType="text"
                     android:text="@string/united_state"
                     android:textSize="@dimen/textSize"
                     app:endIconMode="clear_text"
@@ -160,6 +184,7 @@
                     android:layout_marginStart="@dimen/marginStart"
                     android:layout_marginTop="@dimen/marginTop"
                     android:hint="@string/description"
+                    android:inputType="text"
                     android:maxLength="512"
                     android:textSize="@dimen/textSize"
                     app:endIconMode="clear_text"
@@ -179,42 +204,61 @@
                     app:layout_constraintStart_toEndOf="@id/state_text_input"
                     app:layout_constraintTop_toBottomOf="@id/city_text_input" />
 
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/price_text_input"
+                    android:layout_width="280dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/marginStart"
+                    android:layout_marginTop="@dimen/marginTop"
+                    android:hint="Price"
+                    android:textSize="@dimen/textSize"
+                    app:endIconMode="clear_text"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/barrier"
+                    app:layout_constraintTop_toBottomOf="@id/description_text_input" />
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/surface_text_input"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/marginStart"
-                    android:layout_marginTop="@dimen/marginTop"
-                    android:hint="@string/price"
-                    android:textSize="@dimen/textSize"
-                    app:endIconMode="clear_text"
-                    app:layout_constraintStart_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="parent" />
-
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/number_of_room_text_input"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/marginStart"
-                    android:layout_marginTop="@dimen/marginTop"
-                    android:hint="@string/price"
-                    android:textSize="@dimen/textSize"
-                    app:endIconMode="clear_text"
-                    app:layout_constraintStart_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="parent" />
-
-                <NumberPicker
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/marginStart"
                     android:layout_marginTop="@dimen/marginTop"
-                    app:layout_constraintStart_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="parent" />
+                    android:hint="Surface"
+                    android:inputType="number"
+                    android:maxLength="2"
+                    android:textSize="@dimen/textSize"
+                    app:endIconMode="clear_text"
+                    app:layout_constraintStart_toStartOf="@id/barrier"
+                    app:layout_constraintTop_toBottomOf="@id/price_text_input" />
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/number_of_room_text_input"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/marginStart"
+                    android:layout_marginTop="@dimen/marginTop"
+                    android:hint="Rooms"
+                    android:textSize="@dimen/textSize"
+                    app:endIconMode="clear_text"
+                    app:layout_constraintStart_toEndOf="@id/surface_text_input"
+                    app:layout_constraintTop_toBottomOf="@id/price_text_input" />
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/number_of_bedroom_text_input"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/marginStart"
+                    android:layout_marginTop="@dimen/marginTop"
+                    android:hint="Bedrooms"
+                    android:textSize="@dimen/textSize"
+                    app:endIconMode="clear_text"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/surface_text_input"
+                    app:layout_constraintTop_toBottomOf="@id/price_text_input" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
+
 
         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/bottomAppBar"
