--- a/app/src/main/res/layout-land/add_property_fragment.xml
+++ b/app/src/main/res/layout-land/add_property_fragment.xml
@@ -3,13 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+
     <data>
 
-        <import type="android.view.View" />
+        <variable
+            name="handlers"
+            type="com.openclassrooms.realestatemanager.presentation.ui.addProperty.AddPropertyFragment.Handlers" />
 
         <variable
-            name="propertyType"
+            name="property"
             type="com.openclassrooms.realestatemanager.domain.model.property.Property" />
+
+        <variable
+            name="viewModel"
+            type="com.openclassrooms.realestatemanager.presentation.ui.addProperty.AddPropertyViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
