--- a/app/src/main/res/layout-sw600dp/add_property_fragment.xml
+++ b/app/src/main/res/layout-sw600dp/add_property_fragment.xml
@@ -5,11 +5,18 @@
 
     <data>
 
-        <import type="android.view.View" />
 
         <variable
-            name="propertyType"
+            name="handlers"
+            type="com.openclassrooms.realestatemanager.presentation.ui.addProperty.AddPropertyFragment.Handlers" />
+
+        <variable
+            name="property"
             type="com.openclassrooms.realestatemanager.domain.model.property.Property" />
+
+        <variable
+            name="viewModel"
+            type="com.openclassrooms.realestatemanager.presentation.ui.addProperty.AddPropertyViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
