--- a/app/src/main/res/layout/add_property_fragment.xml
+++ b/app/src/main/res/layout/add_property_fragment.xml
@@ -5,11 +5,18 @@
 
     <data>
 
-        <import type="android.view.View" />
 
         <variable
-            name="propertyType"
+            name="handlers"
+            type="com.openclassrooms.realestatemanager.presentation.ui.addProperty.AddPropertyFragment.Handlers" />
+
+        <variable
+            name="property"
             type="com.openclassrooms.realestatemanager.domain.model.property.Property" />
+
+        <variable
+            name="viewModel"
+            type="com.openclassrooms.realestatemanager.presentation.ui.addProperty.AddPropertyViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -105,9 +112,10 @@
                         android:id="@+id/type_dropdown"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:hint="@string/select_a_property_type"
                         android:inputType="textAutoComplete"
                         android:labelFor="@id/type_input_layout"
-                        android:text="@string/select_a_property_type" />
+                        android:text="@{property.type.toString()}" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -119,6 +127,7 @@
                     android:layout_marginTop="@dimen/marginTop"
                     android:hint="@string/address"
                     android:inputType="textPostalAddress"
+                    android:text="@{property.address1}"
                     android:textSize="@dimen/textSize"
                     app:endIconMode="clear_text"
                     app:layout_constraintStart_toEndOf="@id/barrier"
@@ -132,6 +141,7 @@
                     android:layout_marginTop="@dimen/marginTop"
                     android:hint="@string/address2"
                     android:inputType="textPostalAddress"
+                    android:text="@{property.address2}"
                     android:textSize="@dimen/textSize"
                     app:endIconMode="clear_text"
                     app:layout_constraintStart_toEndOf="@id/barrier"
@@ -145,6 +155,7 @@
                     android:layout_marginTop="@dimen/marginTop"
                     android:hint="@string/city"
                     android:inputType="text"
+                    android:text="@{property.city}"
                     android:textSize="@dimen/textSize"
                     app:endIconMode="clear_text"
                     app:layout_constraintStart_toEndOf="@id/barrier"
@@ -158,6 +169,7 @@
                     android:layout_marginTop="@dimen/marginTop"
                     android:hint="@string/state"
                     android:inputType="textPostalAddress"
+                    android:text="@{property.state}"
                     android:textSize="@dimen/textSize"
                     app:endIconMode="clear_text"
                     app:layout_constraintStart_toEndOf="@id/barrier"
@@ -186,6 +198,7 @@
                     android:hint="@string/description"
                     android:inputType="text"
                     android:maxLength="512"
+                    android:text="@{property.description}"
                     android:textSize="@dimen/textSize"
                     app:endIconMode="clear_text"
                     app:layout_constraintStart_toEndOf="@id/barrier"
@@ -199,6 +212,7 @@
                     android:layout_marginTop="@dimen/marginTop"
                     android:hint="@string/zipcode"
                     android:inputType="number"
+                    android:text="@{String.valueOf(property.zipCode)}"
                     android:textSize="@dimen/textSize"
                     app:endIconMode="clear_text"
                     app:layout_constraintStart_toEndOf="@id/state_text_input"
@@ -211,6 +225,7 @@
                     android:layout_marginStart="@dimen/marginStart"
                     android:layout_marginTop="@dimen/marginTop"
                     android:hint="Price"
+                    android:text="@{String.valueOf(property.price)}"
                     android:textSize="@dimen/textSize"
                     app:endIconMode="clear_text"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -226,6 +241,7 @@
                     android:hint="Surface"
                     android:inputType="number"
                     android:maxLength="2"
+                    android:text="@{String.valueOf(property.surface)}"
                     android:textSize="@dimen/textSize"
                     app:endIconMode="clear_text"
                     app:layout_constraintStart_toStartOf="@id/barrier"
@@ -238,6 +254,7 @@
                     android:layout_marginStart="@dimen/marginStart"
                     android:layout_marginTop="@dimen/marginTop"
                     android:hint="Rooms"
+                    android:text="@{String.valueOf(property.roomNumber)}"
                     android:textSize="@dimen/textSize"
                     app:endIconMode="clear_text"
                     app:layout_constraintStart_toEndOf="@id/surface_text_input"
@@ -250,17 +267,12 @@
                     android:layout_marginStart="@dimen/marginStart"
                     android:layout_marginTop="@dimen/marginTop"
                     android:hint="Bedrooms"
+                    android:text="@{String.valueOf(property.bedroomNumber)}"
                     android:textSize="@dimen/textSize"
                     app:endIconMode="clear_text"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/surface_text_input"
                     app:layout_constraintTop_toBottomOf="@id/price_text_input" />
-
-                <androidx.constraintlayout.helper.widget.Flow
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:layout_editor_absoluteX="155dp"
-                    tools:layout_editor_absoluteY="615dp" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
@@ -284,6 +296,7 @@
             android:baselineAlignBottom="true"
             android:contentDescription="@string/add_property_button"
             app:backgroundTint="@color/colorAccent"
+            android:onClick="@{(v) -> handlers.onClickFriend(property)}"
             app:layout_anchor="@id/bottomAppBar"
             app:srcCompat="@drawable/ic_check_24dp" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
