--- a/app/src/main/res/layout/add_agent_fragment.xml
+++ b/app/src/main/res/layout/add_agent_fragment.xml
@@ -6,9 +6,15 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
             name="agent"
             type="com.openclassrooms.realestatemanager.domain.model.agent.Agent" />
+
+        <variable
+            name="viewmodel"
+            type="com.openclassrooms.realestatemanager.presentation.ui.addAgent.AddAgentViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -56,7 +62,7 @@
                 android:id="@+id/agentName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@{agent.name}" />
+                android:text="@={agent.name}" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -80,7 +86,7 @@
                 android:id="@+id/agentEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@{agent.email}" />
+                android:text="@={agent.email}" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -105,7 +111,71 @@
                 android:id="@+id/agentPhone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@{agent.Phone}" />
+                android:text="@={agent.Phone}" />
         </com.google.android.material.textfield.TextInputLayout>
+        <!-- <com.nambimobile.widgets.efab.ExpandableFabLayout
+             android:id="@+id/expandable_fab_layout"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
+
+             <com.nambimobile.widgets.efab.Overlay
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 app:overlay_orientation="portrait" />
+
+
+
+             <com.nambimobile.widgets.efab.ExpandableFab
+                 android:id="@+id/expandable_fab_portrait"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:onClick="@{(view) -> viewmodel.addAgentToRoomDb(agent) }"
+                 app:efab_icon="@drawable/ic_check_24dp"
+                 app:efab_iconAnimationRotationDeg="0.0"
+                 app:layout_anchor="@id/bottomAppBar" />
+
+
+             <com.google.android.material.bottomappbar.BottomAppBar
+                 android:id="@+id/bottomAppBar"
+                 style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:layout_gravity="bottom"
+                 app:fabAlignmentMode="end"
+                 app:menu="@menu/bottom_app_bar"
+                 app:navigationIcon="@drawable/ic_menu_24dp"
+                 tools:ignore="BottomAppBar" />
+
+         </com.nambimobile.widgets.efab.ExpandableFabLayout>-->
+
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <com.google.android.material.bottomappbar.BottomAppBar
+                android:id="@+id/bottomAppBar"
+                style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                app:fabAlignmentMode="end"
+                app:navigationIcon="@drawable/ic_menu_24dp"
+                app:title="Add a new property" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/addPropertyFAB"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorAccent"
+                android:baselineAlignBottom="true"
+                android:contentDescription="@string/add_property_button"
+
+                android:onClick="@{(view) -> viewmodel.addAgentToRoomDb(agent) }"
+                app:backgroundTint="@color/colorAccent"
+                app:layout_anchor="@id/bottomAppBar"
+                app:srcCompat="@drawable/ic_check_24dp" />
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
