--- a/app/src/main/res/layout/type_layout.xml
+++ b/app/src/main/res/layout/type_layout.xml
@@ -4,9 +4,10 @@
 
     <data>
 
+
         <variable
-            name="property"
-            type="com.openclassrooms.realestatemanager.domain.model.property.Property" />
+            name="viewModel"
+            type="com.openclassrooms.realestatemanager.presentation.ui.addProperty.AddEditPropertyViewModel" />
 
     </data>
 
@@ -34,7 +35,7 @@
                 android:labelFor="@id/type_dropdown"
                 android:layout_height="wrap_content"
                 android:inputType="textAutoComplete"
-                android:text="@{property.type.toString()}" />
+                android:text="@{viewModel.type.toString()}" />
         </com.google.android.material.textfield.TextInputLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
